aboutus-page styling (wip=

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -34,4 +34,5 @@
 @import 'components/ContactMaker'
 @import 'components/Benefits'
 @import 'components/PictureWall'
+@import 'components/Partners'
 @import 'components/Footer'
