--- a/resources/assets/stylus/components/Product.styl
+++ b/resources/assets/stylus/components/Product.styl
@@ -20,6 +20,25 @@
     type-family(light)
     type-size(bigger)
 
+.Product h5
+    // structure
+    margin-top : rhythm(5)
+    // theme-style
+    type-family(bold)
+    type-size()
+
+.Product h6
+    // structure
+    margin-top : rhythm(3)
+    margin-bottom : 0
+    // theme-style
+    color : color.primary
+    type-family(bold)
+    type-size()    
+
+.Product h6 ~ p
+    margin : 0
+
 .Product p
     // structure
     margin-top    : rhythm(8)
