--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -18,8 +18,9 @@
     type-size('small')
     text-transform   : uppercase
     text-decoration  : none
-    border-radius    : rhythm()
+    border-radius    : rhythm(1)
     background-color : color.primary
+    border : none
 
 .Button:hover
     // theme-style
