--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -35,4 +35,6 @@
 @import 'components/Benefits'
 @import 'components/PictureWall'
 @import 'components/Partners'
+@import 'components/Foreground'
+@import 'components/Formular'
 @import 'components/Footer'
