Select, Checkbox styling

--- a/resources/assets/stylus/components/Formular.styl
+++ b/resources/assets/stylus/components/Formular.styl
@@ -85,22 +85,62 @@
 
 .Formular__select:after
     // structure
-    absolute : right rhythm(2) top rhythm(3)
-    content : ">"
+    absolute : top 2px right bottom 2px
+    padding : rhythm(3) rhythm(2)
+    content : "\f078"
+    color : color.secondary
+    font-family : FontAwesome
+    font-size : rhythm(2)
     pointer-events: none
+    border-top-right-radius : rhythm(2)
+    border-bottom-right-radius : rhythm(2)
+    background-color : darken(color.foreground, 10%)
 
 .Formular__select select
     // structure
     appearance : none
     width      : auto
-    padding    : rhythm(2) rhythm(6) rhythm(2) rhythm(3)
+    padding    : rhythm(2) rhythm(8) rhythm(2) rhythm(3)
     cursor : pointer
     // theme-style
     color : color.text
     type-family()
     type-size()
     border-radius : rhythm(2)
-    border        : 2px solid color.secondary
-    outline       : none
-    
+    border        : 2px solid color.background
+    outline       : none    
+
+
+.Formular__checkbox label
+    // structure
+    position : relative
+    display : inline-block
+    padding-left : rhythm(5)
+    cursor : pointer
+    // theme-style
+    type-family()
+    type-size()
+
+.Formular__checkbox label:before
+    // structure
+    absolute : left top 4px
+    content : ' '
+    width : rhythm(3)
+    height : rhythm(3)
+    // theme-style
+    color : color.primary
+    font-family : Fontawesome
+    font-size : rhythm(3)
+    line-height : rhythm(2)
+    background-color : color.background
+    border-radius : rhythm()
+    border : 2px solid lighten(color.secondary, 10%)
+
+.Formular__checkbox input[type="checkbox"]:checked + label:before
+    // structure
+    content : '\f00c'
+
+.Formular__checkbox input[type="checkbox"]
+    // structure
+    display : none
     
