Login-page styling

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -37,4 +37,6 @@
 @import 'components/Partners'
 @import 'components/Foreground'
 @import 'components/Formular'
+@import 'components/Loginpage'
+@import 'components/Loginformular'
 @import 'components/Footer'
