--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -23,7 +23,10 @@
     border : none
 
 .Button:hover
+    // structure
+    cursor : pointer
     // theme-style
     background-color : lighten(color.primary, 30%)
+    
     
 
