Backend styling & login

--- a/resources/assets/stylus/base/colors.styl
+++ b/resources/assets/stylus/base/colors.styl
@@ -13,5 +13,6 @@
     shadow         : rgb(0, 0, 0)
     text           : rgb(48, 48, 48)
     text_negative  : rgb(255, 255, 255)
+    danger         : darken(rgb(217, 0, 17), 15%)
  }
  
