--- a/resources/assets/stylus/components/Formular.styl
+++ b/resources/assets/stylus/components/Formular.styl
@@ -151,3 +151,15 @@
     // structure
     display : none
     
+.Formular .error
+    // structure
+    display : block
+    width : 100%
+    padding : rhythm(3) rhythm(6)
+    // theme-style
+    color : color.text_negative
+    type-family(bold)
+    type-size(small)
+    background-color : color.danger
+    
+    
