--- a/resources/assets/stylus/components/Product.styl
+++ b/resources/assets/stylus/components/Product.styl
@@ -55,6 +55,10 @@
     color : color.primary
     type-size(big)
 
+.Product p + img
+    // structure
+    margin-top : rhythm(5)
+
 .Product p ~ p
     // structure
     margin : 0
