--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -40,3 +40,8 @@
 @import 'components/Loginpage'
 @import 'components/Loginformular'
 @import 'components/Footer'
+
+// Backend components
+@import 'components/Sidebar'
+@import 'components/Backendnav'
+@import 'components/BackendContent'
