--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -39,9 +39,12 @@
 @import 'components/Formular'
 @import 'components/Loginpage'
 @import 'components/Loginformular'
+@import 'components/Cardsgallery'
+@import 'components/Cardsgallery'
 @import 'components/Footer'
 
 // Backend components
 @import 'components/Sidebar'
 @import 'components/Backendnav'
 @import 'components/BackendContent'
+@import 'components/Table'
