--- a/resources/assets/stylus/components/Sidebar.styl
+++ b/resources/assets/stylus/components/Sidebar.styl
@@ -11,19 +11,24 @@ sidebarWidth = rhythm(15)
 .Sidebar
     // structure
     fixed       : top bottom left
-    padding-top : rhythm(2)
     width       : sidebarWidth
     // theme-style
     background-color : color.secondary
-    box-shadow : 3px 0 3px lighten(color.shadow, 20%)
+    box-shadow : 3px 0 6px lighten(color.shadow, 50%)
 
-.Sidebar header
+.Sidebar>header
     // structure
-    margin-bottom : rhythm(2)
+    position : relative;
+    z-index : 0
+    padding: rhythm(2) 0
     text-align    : center
+    // theme-style
+    background-color : color.primary
     
 .Sidebar__user
     // structure
+    position : relative;
+    z-index  : -1
     height     : sidebarWidth
     text-align : center
 
@@ -35,7 +40,5 @@ sidebarWidth = rhythm(15)
     // theme-style
     color : darken(color.secondary, 35%)
     type-family(bold)
-    type-size(bigger)
-    border-bottom    : 3px solid darken(color.secondary, 10%)
-    border-top       : 3px solid darken(color.secondary, 10%)
+    type-size(big)
     background-color : lighten(color.secondary, 10%)
