--- a/resources/assets/stylus/components/BackendContent.styl
+++ b/resources/assets/stylus/components/BackendContent.styl
@@ -14,7 +14,7 @@
     // theme-style
     background-color : color.foreground
 
-.BackendContent header
+.BackendContent > header
     // structure
     padding : rhythm(4) rhythm(10) rhythm(3) + 2px
     // theme-style
