--- a/resources/assets/stylus/components/Loginformular.styl
+++ b/resources/assets/stylus/components/Loginformular.styl
@@ -10,6 +10,7 @@
 .Loginformular
     // structure
     absolute    : top 15% left 50%
+    z-index : 100
     margin-left : rhythm(50) * (-1)
     width       : rhythm(100)
     text-align  : center
