--- a/resources/assets/stylus/components/Loginpage.styl
+++ b/resources/assets/stylus/components/Loginpage.styl
@@ -20,5 +20,6 @@
     // structure
     content : ' '
     absolute : top right bottom left
+    z-index : -9
     // theme-style
     background-color : rgba(color.primary, 0.75)
