--- a/resources/assets/stylus/base/global-styles.styl
+++ b/resources/assets/stylus/base/global-styles.styl
@@ -8,6 +8,6 @@
  global-border-box()
  
  html, body
-     position : relative
-     z-index : -1000
-     height   : 100%
+     position   : relative
+     z-index    : -1000
+     min-height : 100%
