--- a/resources/assets/stylus/components/BackendContent.styl
+++ b/resources/assets/stylus/components/BackendContent.styl
@@ -9,8 +9,10 @@
 /* component definition */
 .BackendContent
     // structure
+    position : relative
+    z-index : 1
     height : 100%
-    padding-left : sidebarWidth
+    margin-left : sidebarWidth
     // theme-style
     background-color : color.foreground
 
