--- a/resources/assets/stylus/base/global-styles.styl
+++ b/resources/assets/stylus/base/global-styles.styl
@@ -7,7 +7,9 @@
  global-reset()
  global-border-box()
  
+ html
+     height : 100%
+ 
  html, body
-     position   : relative
-     z-index    : -1000
      min-height : 100%
+     height : 100%
