--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -49,3 +49,6 @@
 @import 'components/BackendContent'
 @import 'components/Table'
 @import 'components/Modal'
+
+// Transitions
+@import 'transitions/modal'
