--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -28,5 +28,14 @@
     // theme-style
     background-color : lighten(color.primary, 30%)
     
+.Button--default
+.Button--default:visited
+    // theme-style
+    color            : color.text
+    background-color : lighten(color.secondary, 50%)
+
+.Button--default:hover
+    // theme-style
+    background-color : lighten(color.secondary, 60%)
     
 
