--- a/resources/assets/stylus/components/Formular.styl
+++ b/resources/assets/stylus/components/Formular.styl
@@ -37,6 +37,14 @@
     // structure
     width : 100%
     margin-right : 0
+
+.Formular__group.-align-right
+    // structure
+    text-align : right
+
+.Formular__group.-align-center
+    // structure
+    text-align : center
     
 .Formular__group__part
     // structure
