--- a/resources/assets/stylus/components/Modal.styl
+++ b/resources/assets/stylus/components/Modal.styl
@@ -13,6 +13,7 @@
     width       : rhythm(115)
     z-index     : 100
     margin-left : rhythm(-50)
+    text-align  : center;
     // theme-style
     background-color : color.background
     border-bottom-left-radius  : rhythm(5)
