Styling Teaser Bicycle & Protection

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -25,9 +25,12 @@
 @import 'components/Navbar'
 @import 'components/Slider'
 @import 'components/Clients'
+@import 'components/FullImage'
 @import 'components/Teaser'
 @import 'components/Teaser-folation'
 @import 'components/Teaser-sunprotection'
+@import 'components/Teaser-protection'
+@import 'components/Teaser-bicycle'
 @import 'components/Filmhero'
 @import 'components/Hero'
 @import 'components/Product'
