--- a/resources/assets/stylus/base/layers.styl
+++ b/resources/assets/stylus/base/layers.styl
@@ -14,12 +14,26 @@ layer = {
     clients : 800
     teaser  : {
         folation : {
-            _body    : 700
-            filmhero : 701
-            body     : 705
+            _body    : 790
+            filmhero : 791
+            body     : 795
         }
         sunprotection : {
-            _body : 710
+            _body : 780
+        }
+        protection : {
+            _body       : 760
+            hero        : 761
+            title : {
+                background : -1
+                text       : 764
+            }
+            description : 765
+        }
+        bicycle : {
+            _body       : 750
+            background  : 751
+            description : 755
         }        
     } 
     hero : {
