--- a/resources/assets/stylus/base/typographic.styl
+++ b/resources/assets/stylus/base/typographic.styl
@@ -50,5 +50,8 @@ type = {
 type-size(scale = default)
     font-size: type.size[scale]
     line-height: type.line_height[scale]
+    
+get-type-line-height(scale = default)
+    1* type.line_height[scale]
 
 
