--- a/resources/assets/stylus/components/Teaser-sunprotection.styl
+++ b/resources/assets/stylus/components/Teaser-sunprotection.styl
@@ -11,7 +11,8 @@ teaser-sunprotection_height = rhythm(50)
 // component definition
 .Teaser-sunprotection
     // structure
-    height : teaser-sunprotection_height + rhythm(25)
+    height  : teaser-sunprotection_height + rhythm(25)
+    z-index : layer.teaser.sunprotection._body
     // theme-style
     background-color : color.secondary_dark
 
