--- a/resources/assets/stylus/components/Teaser.styl
+++ b/resources/assets/stylus/components/Teaser.styl
@@ -14,7 +14,7 @@
     overflow : hidden
     // theme-style
     border-bottom-left-radius : rhythm(25)
-    box-shadow : 0 8px 15px color.shadow
+    box-shadow : 0 rhythm() rhythm(2) rgba(color.shadow, 0.75)
 
 .Teaser.-overhead
     // structure
